--- a/client/package.json
+++ b/client/package.json
@@ -4,8 +4,11 @@
   "private": true,
   "dependencies": {
     "axios": "^0.18.0",
+    "lodash": "^4.17.5",
     "react": "^16.3.0",
     "react-dom": "^16.3.0",
+    "react-phone-input": "^1.2.1",
+    "react-phone-input-2": "^2.2.1",
     "react-router-dom": "^4.2.2",
     "react-scripts": "1.1.1"
   },
