--- a/package.json
+++ b/package.json
@@ -15,15 +15,32 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "bootstrap": "4.0.0",
     "express": "^4.16.3",
     "express-session": "^1.15.6",
+    "form-schema-validation": "^1.15.1",
+    "format-phonenumber": "^0.0.1",
+    "lodash": "^4.17.5",
     "mongoose": "^5.0.12",
     "mysql": "^2.15.0",
     "mysql2": "^1.5.3",
     "passport": "^0.4.0",
     "passport-local": "^1.0.0",
     "passport-local-mongoose": "^5.0.0",
+    "phonenumber-format": "^1.0.2",
     "prettier-eslint": "^8.8.1",
+    "react": "^16.0.0",
+    "react-autosuggest": "^9.3.4",
+    "react-components-form": "^3.3.1",
+    "react-dom": "^16.0.0",
+    "react-dropdown": "^1.4.0",
+    "react-phone-input": "^1.2.1",
+    "react-phone-number-input": "^1.0.4",
+    "react-popper": "^0.9.2",
+    "react-tag-autocomplete": "^5.5.0",
+    "react-tagsinput": "^3.19.0",
+    "react-transition-group": "^2.3.0",
+    "reactstrap": "^5.0.0-beta.3",
     "sequelize": "^4.37.5"
   },
   "devDependencies": {
