--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
   "license": "ISC",
   "dependencies": {
     "bootstrap": "4.0.0",
+    "create-react-class": "^15.6.3",
     "express": "^4.16.3",
     "express-session": "^1.15.6",
     "form-schema-validation": "^1.15.1",
@@ -31,12 +32,14 @@
     "prettier-eslint": "^8.8.1",
     "react": "^16.0.0",
     "react-autosuggest": "^9.3.4",
+    "react-bootstrap-multiselect": "^2.4.1",
     "react-components-form": "^3.3.1",
     "react-dom": "^16.0.0",
     "react-dropdown": "^1.4.0",
     "react-phone-input": "^1.2.1",
     "react-phone-number-input": "^1.0.4",
     "react-popper": "^0.9.2",
+    "react-select": "^1.2.1",
     "react-tag-autocomplete": "^5.5.0",
     "react-tagsinput": "^3.19.0",
     "react-transition-group": "^2.3.0",
