--- a/client/package.json
+++ b/client/package.json
@@ -5,10 +5,13 @@
   "dependencies": {
     "axios": "^0.18.0",
     "lodash": "^4.17.5",
+    "material-ui": "^0.20.0",
+    "multi-select-react": "^0.1.8",
     "react": "^16.3.0",
     "react-dom": "^16.3.0",
-    "react-phone-input": "^1.2.1",
+    "react-materialize": "^2.2.0",
     "react-phone-input-2": "^2.2.1",
+    "react-places-autocomplete": "^6.1.3",
     "react-router-dom": "^4.2.2",
     "react-scripts": "1.1.1"
   },
