--- a/client/package.json
+++ b/client/package.json
@@ -6,6 +6,7 @@
     "axios": "^0.18.0",
     "lodash": "^4.17.5",
     "material-ui": "^0.20.0",
+    "moment": "^2.22.1",
     "multi-select-react": "^0.1.8",
     "react": "^16.3.0",
     "react-dom": "^16.3.0",
